--- a/style.css
+++ b/style.css
@@ -47,9 +47,14 @@ body{
 }
 
 .logo{
+    position: relative;
     font-size: 2.5rem;
     color: var(--text-color);
     font-weight: 600;
+}
+
+.navbar{
+    position: relative;
 }
 
 .navbar a{
@@ -60,11 +65,13 @@ body{
     transition: .3s;
 }
 
-.navbar a:hover{
+.navbar a:hover,
+.navbar a:active{
     color: var(--main-color);
 }
 
 #menu-icon{
+    position: relative;
     font-size: 3.6rem;
     color: var(--text-color);
     cursor: pointer;
@@ -87,9 +94,12 @@ section{
 
 .home-content{
     max-width: 60rem;
+    z-index: 99;
 }
 
 .home-content h1{
+    position: relative;
+    display: inline-block;
     font-size: 5.2rem;
     font-weight: 700;
     line-height: 1.3;
@@ -106,9 +116,39 @@ section{
     font-weight: 700;
     color: transparent;
     -webkit-text-stroke: .7px var(--main-color);
+    background-image: linear-gradient(var(--main-color), var(--main-color));
+    background-repeat: no-repeat;
+    -webkit-background-clip: text;
+    background-position: -33rem 0;
+    
+}
+
+.home.show-animate .home-content .text-animate h3{
+    animation: homeBgText 6s linear infinite;
+    animation-delay: 2s;
+}
+
+.home-content .text-animate h3::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    border-right: 2px solid var(--main-color);
+    z-index: -1;
+    animation: homeCursorText 6s linear infinite;
+    animation-delay: 2s;
+
+}
+
+.home.show-animate .home-content .text-animate h3::before{
+    animation: homeBgText 6s linear infinite;
+    animation-delay: 2s;
 }
 
 .home-content p{
+    position: relative;
     font-size: 1.6rem;
     margin: 2rem 0 4 rem;
 }
@@ -241,6 +281,7 @@ section{
 } 
 
 .heading{
+    position: relative;
     font-size: 5rem;
     margin-bottom: 3rem;
     text-align: center; 
@@ -278,15 +319,19 @@ span{
     border-bottom: .2rem solid var(--second-bg-color);
     border-left: .2rem solid var(--main-color);
     border-right: .2rem solid var(--main-color);
+    animation: aboutSpinner 8s linear infinite;
 }
 
 .about-content{
     text-align: center;
 }
 .about-content h3{
+    position: relative;
+    display: inline-block;
     font-size: 2.6rem;
 }
 .about-content p {
+    position: relative;
     font-size: 1.6rem;
     margin: 2rem 0 3 rem;
 }
@@ -318,10 +363,13 @@ span{
 }
 
 .education-column .title{
+    position: relative;
+    display: inline-block;
     font-size: 2.5rem;
     margin: 0 0 1.5rem 2rem;
 }
 .education-column .education-box{
+    position: relative;
     border-left: .2rem solid var(--main-color);
 }
 
@@ -386,6 +434,12 @@ span{
     background: var(--second-bg-color);
 }
 
+.skills h2{
+    display: inline-block;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 .skills .skills-row{
     display: flex;
     flex-wrap: wrap;
@@ -397,9 +451,15 @@ span{
 } 
 
 .skills-column .title{
+    position: relative;
+    display: inline-block;
     font-size: 2.5rem;
     margin: 0 0 1.5rem;
 } 
+
+.skills-column .skills-box{
+    position: relative;
+}
 
 .skills-box .skills-content{
     position: relative;
@@ -500,6 +560,12 @@ span{
     padding-bottom: 7rem;
 }
 
+.contact h2{
+    display: inline-block;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 .contact form {
     max-width: 70rem;
     margin: 0 auto;
@@ -576,6 +642,12 @@ span{
     padding: 2rem 9%;
     background: var(--second-bg-color);
 }
+
+.footer-text,
+.footer-iconTop{
+    position: relative;
+}
+
 .footer-text p{
     font-size: 1.6rem;
 }
@@ -618,6 +690,53 @@ span{
     color: var(--main-color);
 }
 
+/*ANIMATION RELOAD AND SCROLL*/
+.animate{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--bg-color);
+    z-index: 98;
+}
+
+.animate.home-img{
+    width: 50%;
+}
+
+.logo .animate,
+.navbar .animate,
+#menu-icon .animate,
+.home.show-animate .animate{
+    animation: showRight 1s ease forwards;
+    animation-delay: calc(.3s * var(--i));
+}
+
+.animate.scroll{
+    transition: 1s ease;
+    transition-delay: calc(.3s / var(--i));
+    animation: none;
+}
+
+section:nth-child(odd) .animate.scroll,
+.footer .animate.scroll{
+    background: var(--second-bg-color);
+}
+
+.education .education-box .animate.scroll{
+    width: 105%;
+}
+
+.about.show-animate .animate.scroll,
+.education.show-animate .animate.scroll,
+.skills.show-animate .animate.scroll,
+.contact.show-animate .animate.scroll,
+.footer.show-animate .animate.scroll{
+    transition-delay: calc(.3s * var(--i));
+    width: 0;
+}
+
 /*BREAKPOINTS*/
 @media (max-width: 1200px){
     html{
@@ -642,6 +761,12 @@ span{
     }
 }
 
+@media (max-width: 850px){
+    .animate.home-img{
+        width: 55%;
+    }
+}
+
 @media (max-width: 768px){
     .header{
         background: var(--bg-color);
@@ -657,17 +782,147 @@ span{
         left: 0;
         width: 100%;
         padding: 1rem 4%;
-        background: var(--bg-color);
+        background: var(--main-color);
         box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
+        z-index: 1;
+        transition: .25s ease;
+        transition-delay: .25s;
+    }
+
+    .navbar.active{
+        left: 0;
+        transition-delay: 0s;
+    }
+
+    .navbar .active-nav{
+        position: absolute;
+        top: 0;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        background: var(--bg-color);
+        border-top: .1rem solid rgba(0, 0, 0, .2);
+        z-index: -1;
+        transition: .25s ease;
+        transition-delay: 0s;
+    }
+
+    .navbar.active .active-nav{
+        left: 0;
+        transition-delay: .25s;
     }
 
     .navbar a{
         display: block;
         font-size: 2rem;
         margin: 3rem 0;
+        transform: translateX(-20rem);
+        transition: .25s ease;
+        transition-delay: 0s;
+    }
+
+    .navbar.active a{
+        transform: translateX(0);
+        transition-delay: .25s;
+    }
+
+    .home-imgHover{
+        pointer-events: none;
+        background: var(--bg-color);
+        opacity: .6;
     }
 }
 
+@media(max-width: 520px){
+    html{
+        font-size: 50%;
+    }
+
+    .home-content h1 {
+        display: flex;
+        flex-direction: column;
+    }
+    .home-sci {
+        width: 160px;
+    }
+
+    .home-sci a {
+        width: 38px;
+        height: 38px;
+
+    }
+}
+
+@media (max-width: 462px){
+    .home-content h1{
+        font-size: 5.2rem;
+    }
+    .education{
+        padding: 10rem 4% 5rem 5%;
+    }
+
+    .contact form .input-box .input-field{
+        width: 100%;
+    }
+    .footer {
+        flex-direction: column-reverse;
+    }
+    .footer p {
+        margin-top: 2rem;
+        text-align: center;
+    }
+} 
+
+@media (max-width: 371px){
+    .home{
+        justify-content: center;
+    }
+    .home-content{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .home-content h1{
+        font-size: 5rem;
+    } 
+}
+
+/*KEYFRAME ANIMATION*/
+@keyframes homeBgText{
+    0%, 10%, 100%{
+        background-position: -33rem 0;
+    }
+    65%, 85%{
+        background-position: 0 0;
+    }
+}
+
+@keyframes homeCursorText{
+    0%, 10%, 100%{
+       width: 0;
+    }
+    65%, 78%, 85%{
+        width: 100%;
+        opacity: 1;
+    }
+    75%, 81%{
+        opacity: 0;
+    }
+}
+
+@keyframes aboutSpinner{
+    100%{
+        transform: translate(-50%, -50%) rotate(360deg);
+    }
+}
+
+@keyframes showRight{
+    100%{
+        width: 0;
+    }
+}
 
 
 
